--- a/requirements.txt
+++ b/requirements.txt
@@ -1,93 +1,8 @@
-Django==1.7.1
+Django==1.7
 Markdown==2.5.1
-South==1.0.1
-actionlib==1.10.3
-argparse==1.2.1
-base-local-planner==1.11.6
-bondpy==1.7.13
-catkin==0.5.86
-diagnostic-common-diagnostics==1.8.0
-distribute==0.6.24
 dj-database-url==0.3.0
 dj-static==0.0.6
-django-markdown==0.7.1
-django-toolbelt==0.0.1
-dynamic-reconfigure==1.5.34
-gencpp==0.4.17
-genlisp==0.4.12
-genmsg==0.4.25
-genpy==0.4.16
 gunicorn==19.1.1
-interactive-markers==1.10.2
-message-filters==1.10.2
-pluginlib==1.9.24
-psycopg2==2.5.4
-python-qt-binding==0.2.12
-qt-dotgraph==0.2.22
-qt-gui==0.2.22
-qt-gui-app==0.2.22
-qt-gui-cpp==0.2.22
-qt-gui-py-common==0.2.22
-resource-retriever==1.10.18
-rosbag==1.10.2
-rosboost-cfg==1.10.9
-rosclean==1.10.9
-roscreate==1.10.9
-rosdoc-lite==0.2.3
-rosgraph==1.10.2
-roslaunch==1.10.2
-roslib==1.10.9
-rosmake==1.10.9
-rosmaster==1.10.2
-rosmsg==1.10.2
-rosnode==1.10.2
-rosparam==1.10.2
-rospy==1.10.2
-rosservice==1.10.2
-rostest==1.10.2
-rostopic==1.10.2
-rosunit==1.10.9
-roswtf==1.10.2
-rqt-action==0.3.4
-rqt-bag==0.3.4
-rqt-bag-plugins==0.3.4
-rqt-console==0.3.4
-rqt-dep==0.3.4
-rqt-graph==0.3.4
-rqt-gui==0.2.14
-rqt-gui-py==0.2.14
-rqt-launch==0.3.4
-rqt-logger-level==0.3.4
-rqt-moveit==0.3.3
-rqt-msg==0.3.4
-rqt-nav-view==0.3.3
-rqt-plot==0.3.4
-rqt-pose-view==0.3.3
-rqt-publisher==0.3.4
-rqt-py-common==0.3.4
-rqt-py-console==0.3.4
-rqt-reconfigure==0.3.4
-rqt-robot-dashboard==0.3.3
-rqt-robot-monitor==0.3.3
-rqt-robot-steering==0.3.3
-rqt-runtime-monitor==0.3.3
-rqt-service-caller==0.3.4
-rqt-shell==0.3.4
-rqt-srv==0.3.4
-rqt-tf-tree==0.3.3
-rqt-top==0.3.4
-rqt-topic==0.3.4
-rqt-web==0.3.4
-sensor-msgs==1.10.6
-smach==1.3.1
-smach-ros==1.3.1
-smclib==1.7.13
-static3==0.5.1
-tf==1.10.8
-tf-conversions==1.10.8
-tf2-geometry-msgs==0.4.10
-tf2-kdl==0.4.10
-tf2-py==0.4.10
-tf2-ros==0.4.10
+psycopg2==2.5.1
+static==0.4
 wsgiref==0.1.2
-xacro==1.8.4
